Started modifying description and table

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <nav class="#5e35b1 deep-purple darken-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/WOW/" class="brand-logo">WOW! That's Engineering!</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/WOW/" class="brand-logo">Introducing Girls to Engineering Workshop</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
       </ul>
@@ -43,9 +43,11 @@
       <img width="660" src="wow.jpg">
     </div>
 
-      <h2 class="header center #673ab7 deep-purple-text">Girls in 7th to 10th Grades</h2>
+      <h2 class="header center #673ab7 deep-purple-text">Girls in 3rd to 6th Grades</h2>
       <div class="row center">
-        <h3 class="header col s12 light deep-purple-text">Be a part of <i>Wow! That’s Engineering!</i></h3>
+        <h3 class="header col s12 light deep-purple-text">Girls can become engineers too!</h3>
+          <p> Discover what engineering is all about while you have fun in five hands-on lab workshops. Each workshop will provide you    with opportunities to do fun hands-on experiments related to several different engineering career fields. You will also be able to find out what different types of engineers do and will meet women engineers who will talk about how they became engineers.
+          </p>
       </div>
 
 
@@ -104,7 +106,7 @@
           <div class="card-stacked">
             <div class="card-content #00acc1 cyan darken-2 white-text center">
             <h5>
-              Date:  Saturday, October 14, 2017 <br>
+              Date:  Saturday, February 24, 2018 <br>
 
               <br>
 
@@ -118,7 +120,7 @@
 
               <br>
 
-              Cost:  $30.00  Includes lunch, drinks, snack, shirt and all supplies.
+              Cost:  $30.00  Includes workshop, lunch, drinks, snack, T-shirt, all supplies and FUN.
             </h5>
 
             </div>
