Added 3 tracks to table

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
  <div class="container">
     <div class="section">
-
+      <h5>Track 1</h5>
           <table class="striped">
             <thead>
               <tr>
@@ -170,50 +170,112 @@
 
             <tbody>
               <tr>
-                <td>1A. Goo Busters</td>
-                <td>Become a chemical engineer while formulating your goo in the mad scientist lab.</td>
-              </tr>
-              <tr>
-                <td>1B. Sink or Swim</td>
-                <td>Learn about the engineering design process and the physical principles of buoyancy and displacement by working together to build a boat.</td>
-              </tr>
-              <tr>
-                <td>1C. Take Flight</td>
-                <td>Become an Aeronautical Engineer, What type of airplane will you design?  Will it go the farthest or do the best tricks?</td>
-              </tr>
-              <tr>
-                <td>1D.  Spinning Fibers into Life  (Replaces Nanomaterial Magic & Mystery)</td>
-                <td>Learn all about tissue engineering by creating new materials that can build human organs and save lives!</td>
-              </tr>
-              <tr>
-                <td>1E. Minute to Win It</td>
-                <td>Test your skills with our 60 second challenges that use objects that are commonly available around the house.</td>
-              </tr>
-              <tr>
-                <td>1F. Duct Tape Creations</td>
-                <td>Engineering comes alive with handmade creations that can be transformed from one thing to another all using duct tape while you make wallets and other creations.</td>
-              </tr>
-              <tr>
-                <td>1G. CSI</td>
-                <td>Become a Crime Scene Investigator. Learn how to lift and save a finger print with special finger print powder and match it to find the “culprit.” Then create dental or shoe prints for your group and learn how to identify the suspect.</td>
-              </tr>
-              <tr>
-                <td>1H. Programming Robots</td>
-                <td>Learn about robots and try your hand at programming a robot to complete an obstacle course.</td>
-              </tr>
-              <tr>
-                <td>1I. Tool Time</td>
-                <td>Hands-on learning about the use of different tools and what’s inside small electrical appliances.</td>
-              </tr>
-              <tr>
-                <td>1J. Design a Dessert</td>
+                <td>Design a Dessert</td>
                 <td>Find out what a design engineer does as you design and construct a dessert.</td>
+              </tr>
+              <tr>
+                <td>Duct Tape Creations</td>
+                <td>Use the ultimate engineer's tool: duct tape!  And show off your fashionista skills! You will be able to make wallets, flowers, and other creations so     bring your creativity!</td>
+              </tr>
+              <tr>
+                <td>Programming Robots</td>
+                <td>Learn about robots and computer programming while you program a LEGO robot and tell it what to do! <br>
+                  (Warning: will not teach you how to tell your sibling what to do)</td>
+              </tr>
+              <tr>
+                <td>Bridges</td>
+                <td>Engineers and architects designed the famous Brooklyn Bridge, Golden Gate Bridge, London Bridge, and others. Find out about civil engineering as you design and test your own bridge!</td>
+              </tr>
+              <tr>
+                <td>Cray-Cray Cranes</td>
+                <td>Lifting heavy items can be difficult but with the help of engineers we show you how to create a easier way to lift and move those heavy items.</td>
               </tr>
             </tbody>
           </table>
+
     </div>
   </div>
 
+  <!--   Track 2   -->
+
+  <div class="container">
+    <div class="section">
+      <h5>Track 2</h5>
+      <table class="striped">
+        <thead>
+        <tr>
+          <th>Project Title</th>
+          <th>Description</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+          <td>3D Me: The Future of Manufacturing Body Parts</td>
+          <td>Learn how scanners and 3D printers can turn you into an avatar and build your dream ideas into reality!</td>
+        </tr>
+        <tr>
+          <td>Sky-High Sky Scrapers</td>
+          <td>Engineers and architects build some of the tallest and most impressive buildings in the world. Learn about civil engineering as you build your own slender tower.</td>
+        </tr>
+        <tr>
+          <td>Goo Busters</td>
+          <td>Become a chemical engineer while formulating your goo in the mad scientist lab.</td>
+        </tr>
+        <tr>
+          <td>Nanomaterial Magic & Mystery</td>
+          <td>Step right up! Learn about the exciting production and applications of nanomaterials while participating in a one of a kind carnival!</td>
+        </tr>
+        <tr>
+          <td>Design a Lunar Lander</td>
+          <td>12 men have walked on the Moon, and engineers made it happen. Do you have what it takes to land your astronaut safely on the Moon?</td>
+        </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+
+
+  <!--   Track 3   -->
+
+  <div class="container">
+    <div class="section">
+      <h5>Track 3</h5>
+      <table class="striped">
+        <thead>
+        <tr>
+          <th>Project Title</th>
+          <th>Description</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+          <td>Chocolate Asphalt</td>
+          <td>Learn about road construction and what a civil engineer does while you make chocolate 'asphalt' - a delicious layered dessert!</td>
+        </tr>
+        <tr>
+          <td>Sticky Situations</td>
+          <td>We use glue for all kinds of applications. Make your own glue and see just how sticky it is!</td>
+        </tr>
+        <tr>
+          <td>Bedroom Alarms</td>
+          <td>Learn about electrical circuits using alarm kits and build your own alarm system all while learning about electrical engineers.</td>
+        </tr>
+        <tr>
+          <td>Paper Structures</td>
+          <td>Can a paper structure hold up a book? Find out as you use civil engineering to build the strongest structures you can out of paper.</td>
+        </tr>
+        <tr>
+          <td>Marble Run</td>
+          <td>Like roller coasters? This is your chance to be the mechanical engineer that designs and builds one!</td>
+        </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
   <div class="container">
     <div class="section">
 
