Added 3 tracks to table

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
               <br>
 
               Time:   9:00am – 3:30pm <br>
+              <p>(Registration check-in starts at 8:30am)</p>
               <br>
 
               Location:  Holy Trinity Episcopal Academy (upper school) <br>
@@ -132,7 +133,9 @@
 
       <div class="row center">
       <p>
-          Choose 8 workshop modules from the list below in order of preference.<br>
+        Due to the location and size of our event, we will have 3 different groupings of 5 modules. <br>
+        Please select the girls top 2 choices of tracks and we will do our best to accommodate their first choice.  <br>
+        This is a group of 5 workshop modules.  Workshops may be changed or cancelled based on registration or instructor availability.<br>
           * A credit/debit card is needed to be able to register online. *
       </p>
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
@@ -150,6 +153,10 @@
 
       </div>
       <br>
+      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 15..
+
+
+      <br>
             
     </div>
   </div>
@@ -158,7 +165,7 @@
   
 
  <div class="container">
-    <div class="section">
+    <div class="section #dcedc8 light-green lighten-4">
       <h5>Track 1</h5>
           <table class="striped">
             <thead>
@@ -199,7 +206,7 @@
   <!--   Track 2   -->
 
   <div class="container">
-    <div class="section">
+    <div class="section #e1bee7 purple lighten-4">
       <h5>Track 2</h5>
       <table class="striped">
         <thead>
@@ -240,7 +247,7 @@
   <!--   Track 3   -->
 
   <div class="container">
-    <div class="section">
+    <div class="section #b2ebf2 cyan lighten-4">
       <h5>Track 3</h5>
       <table class="striped">
         <thead>
@@ -276,6 +283,13 @@
 
     </div>
   </div>
+
+    <div class="row center">
+        <p><i>Parents/Guardians are required to escort girls to and from the gym at the beginning and end of the program but are not allowed to accompany girls to the classrooms.<br>
+
+          N.B. There is no Parent or Teacher program this year.</i></p>
+
+    </div>
   <div class="container">
     <div class="section">
 
@@ -310,7 +324,7 @@
             <h5 class="center">Questions?</h5>
 
             <p class="light center"> You can contact us via:<br>
-            Email: <a href="mailto:wow@swe-sc.org">wow@swe-sc.org</a> <br>
+            Email: <a href="mailto:igew@swe-sc.org">igew@swe-sc.org</a> <br>
             Phone: (321) 345-7930 (Please leave a message) <br>
             Text: (321) 345-7930</p>
           </div>
@@ -331,6 +345,7 @@
 
 
         </div>
+
         <div class="col l3 s12">
         </div>
         <div class="col l3 s12">
@@ -342,6 +357,19 @@
         </div>
       </div>
     </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+
+          <h5 class="white-text">Thank you to our Sponsors!</h5>
+          Jacobs<br>
+          Lockheed Martin <br>
+          Vencore
+        </div>
+      </div>
+    </div>
+
     <div class="footer-copyright">
       <div class="container">
       Made by <a class="#00bcd4 cyan-text text-lighten-3" href="https://sunita321.github.io/" target="_blank">Sunita Ramnarinesingh</a> &copy;
