--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
     <div class="row center">
-      <img width="660" src="wow.jpg">
+      <img width="660" src="header.jpg">
     </div>
 
       <h2 class="header center #673ab7 deep-purple-text">Girls in 3rd to 6th Grades</h2>
       <div class="row center">
-        <h3 class="header col s12 light deep-purple-text">Girls can become engineers too!</h3>
+        <h3 class="header col s12 light deep-purple-text">You can become engineers too!</h3>
           <p> Discover what engineering is all about while you have fun in five hands-on lab workshops. Each workshop will provide you    with opportunities to do fun hands-on experiments related to several different engineering career fields. You will also be able to find out what different types of engineers do and will meet women engineers who will talk about how they became engineers.
           </p>
       </div>
@@ -325,8 +325,6 @@
 
             <p class="light center"> You can contact us via:<br>
             Email: <a href="mailto:igew@swe-sc.org">igew@swe-sc.org</a> <br>
-            Phone: (321) 345-7930 (Please leave a message) <br>
-            Text: (321) 345-7930</p>
           </div>
         </div>
       </div>
