Added igew volunteer

--- a/volunteer.html
+++ b/volunteer.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <meta name="description" content="WOW!">
   <meta name="author" content="Sunita Ramnarinesingh">
-  <title>WOW! Volunteers</title>
+  <title>IGEW Volunteers</title>
 
 
   <!-- Tab Image -->
@@ -21,10 +21,10 @@
 
 <body>
   <nav class="#5e35b1 deep-purple darken-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/WOW/volunteer.html" class="brand-logo">WOW! That's Engineering! Volunteers</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/WOW/volunteer.html" class="brand-logo">IGEW Volunteers</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="http://www.swe-sc.org/WOW/">WOW Participant</a></li>
-        <li><a href="http://swe-sc.org/outreach2/wow-thats-engineering/">WOW Outreach</a></li>
+        <li><a href="http://www.swe-sc.org/IGEW/VolunteerReg.html">IGEW Participant</a></li>
+        <li><a href="http://www.swe-sc.org/IGEW/">IGEW Outreach</a></li>
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
 
       </ul>
@@ -32,8 +32,8 @@
       <!--Mobile nav-->
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="http://www.swe-sc.org/WOW/">WOW Participant</a></li>
-        <li><a href="http://swe-sc.org/outreach2/wow-thats-engineering/">WOW Outreach</a></li>
+        <li><a href="http://www.swe-sc.org/WOW/">IGEW Participant</a></li>
+        <li><a href="http://swe-sc.org/outreach2/wow-thats-engineering/">IGEW Outreach</a></li>
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -42,7 +42,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
     <div class="row center">
-      <img width="660" src="wow.jpg">
+      <img width="660" src="header.jpg">
     </div>
 
       <h2 class="header center #673ab7 deep-purple-text">Volunteers Welcome</h2>
