--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <nav class="#5e35b1 deep-purple darken-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/WOW/" class="brand-logo">Introducing Girls to Engineering Workshop</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/IGEW/" class="brand-logo">Introducing Girls to Engineering Workshop</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
       </ul>
@@ -297,12 +297,12 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <a href="http://www.swe-sc.org/WOW/volunteer.html" target="_blank">
+            <a href="volunteer.html" target="_blank">
             <h2 class="center light-blue-text"><i class="material-icons">group</i></h2>
             <h5 class= 'center'>Volunteer Information</h5></a>
 
             <p class="light">All volunteers must register so we have your lunch choice, name tag and can assign you to a job.</p>
-            <p class="center"><a href="http://www.swe-sc.org/WOW/volunteer.html" target="_blank"> Volunteer Registration Link</p></a>
+            <p class="center"><a href="volunteer.html" target="_blank"> Volunteer Registration Link</p></a>
 
           </div>
         </div>
