fixed links need to add pics and eventbrite link

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
 
       <!--Mobile nav-->
 
-      <ul id="nav-mobile" class="side-nav">
-        <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
-      </ul>
-      <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="side-nav">
+            <li><a href="http://www.swe-sc.org/IGEW/">IGEW Participant</a></li>
+            <li><a href="http://www.swe-sc.org/IGEW/VolunteerReg">IGEW Volunteer</a></li>
+            <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
   </nav>
   <div class="section no-pad-bot" id="index-banner">
@@ -139,7 +141,7 @@
           * A credit/debit card is needed to be able to register online. *
       </p>
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href=" https://www.eventbrite.com/e/wow-thats-engineering-tickets-36471497230" target="_blank" id="download-button" class="btn-large waves-effect waves-light #ec407a pink lighten-1"><i class="material-icons right">edit</i>Register Online</a>
+        <a href="#" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register Online</a>
       </div>
       <div class="row center">
       <p>
@@ -325,6 +327,8 @@
 
             <p class="light center"> You can contact us via:<br>
             Email: <a href="mailto:igew@swe-sc.org">igew@swe-sc.org</a> <br>
+              Or<br>
+              <a href="mailto:vstroh77@gmail.com">Vanessa Stroh</a>
           </div>
         </div>
       </div>
