--- a/volunteer.html
+++ b/volunteer.html
@@ -32,8 +32,8 @@
       <!--Mobile nav-->
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="http://www.swe-sc.org/WOW/">IGEW Participant</a></li>
-        <li><a href="http://swe-sc.org/outreach2/wow-thats-engineering/">IGEW Outreach</a></li>
+        <li><a href="http://www.swe-sc.org/IGEW/">IGEW Participant</a></li>
+        <li><a href="http://www.swe-sc.org/IGEW/VolunteerReg">IGEW Volunteer</a></li>
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -66,7 +66,7 @@
           <div class="card-stacked">
             <div class="card-content #00acc1 cyan darken-2 white-text center">
             <h5>
-              Date:  Saturday, October 14, 2017 <br>
+                Date: Saturday, February 24, 2018 <br>
 
               <br>
 
@@ -127,10 +127,9 @@
 
               <li class="collection-item">
               
-                <p><i class="material-icons">chevron_right</i> There will be a volunteer training meeting on September 24th at a restaurant to be announced later in south Melbourne or Palm Bay.  <br>
+                <p><i class="material-icons">chevron_right</i> There will be a volunteer training meeting on ????  <br>
                 This meeting is <b>required for workshop leaders</b> and encouraged for first time volunteers. <br>
-                There will also be a bag/badge stuffing party at Adia's house in Titusville (Details and directions will be provided later.)
-                  
+                  Details??? 
                 </p>
               </li>
 
@@ -168,7 +167,7 @@
       <div class="row center">
   
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="https://www.eventbrite.com/e/wow-volunteer-tickets-36974311160" target="_blank" id="download-button" class="btn-large waves-effect waves-light #ec407a pink lighten-1"><i class="material-icons right">edit</i>Register to Volunteer</a>
+        <a href="#" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
       </div>
       <br>
 
@@ -328,10 +327,10 @@
             <h2 class="center light-blue-text"><i class="material-icons">help</i></h2>
             <h5 class="center">Questions?</h5>
 
-            <p class="light center"> You can contact us via:<br>
-            Email: <a href="mailto:wow@swe-sc.org">wow@swe-sc.org</a> <br>
-            Phone: (321) 345-7930 (Please leave a message) <br>
-            Text: (321) 345-7930</p>
+            <p class="light center"> You can contact us via email:<br>
+              <a href="mailto:igew@swe-sc.org">igew@swe-sc.org</a> <br>
+            Or<br>
+              <a href="mailto:vstroh77@gmail.com">Vanessa Stroh</a>
           </div>
         </div>
       </div>
