Added new banner and waiver from

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
     <div class="row center">
-      <img width="660" src="header.jpg">
+      <img width="660" src="igew banner.png">
     </div>
 
       <h2 class="header center #673ab7 deep-purple-text">Girls in 3rd to 6th Grades</h2>
@@ -63,7 +63,7 @@
       <div class="col s12 m7">
     <div class="card horizontal">
       <div class="card-image">
-        <img src="photo2.jpg">
+        <!-- <img src="">  insert photo here-->
       </div>
       <div class="card-stacked">
         <div class="card-content">
@@ -136,7 +136,7 @@
       <div class="row center">
       <p>
         Due to the location and size of our event, we will have 3 different groupings of 5 modules. <br>
-        Please select the girls top 2 choices of tracks and we will do our best to accommodate their first choice.  <br>
+        Please select the girl's top 2 choices of tracks and we will do our best to accommodate their first choice.  <br>
         This is a group of 5 workshop modules.  Workshops may be changed or cancelled based on registration or instructor availability.<br>
           * A credit/debit card is needed to be able to register online. *
       </p>
@@ -145,17 +145,17 @@
       </div>
       <div class="row center">
       <p>
-      <i>Registration deadline extended to Thursday, 9/28</i><br> 
-      <b>Register by mail instructions: </b> <br>
+      <i>Registration deadline extended to ????</i><br>
+     <h5> <b>Register by mail instructions: </b> <br> </h5>
       Download and print this <a href="http://swe-sc.org/WOW/WOWRegForm.pdf" target="_blank">registration form</a>. <br>
-      Have your parent sign the form and mail it in, post marked no later than Sept 28th with a check<br><br>
+      A parent sign the form and mail it in, post marked no later than Sept 28th with a check<br><br>
       <i>Can't afford the $30 fee?</i><br> 
-      Request a need-based <a href="https://form.jotformpro.com/72235166906963" target="_blank">fee waiver here</a>. <br>
-      Waiver due date:  Sept 24th. You must also register by the due date.</p>
+      Request a need-based <a href="https://form.jotform.com/73476813306964" target="_blank">fee waiver here</a>. <br>
+      Waiver due date:  ???. You must also register by the due date.</p>
 
       </div>
       <br>
-      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 15..
+      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 15. 
 
 
       <br>
@@ -325,10 +325,8 @@
             <h2 class="center light-blue-text"><i class="material-icons">help</i></h2>
             <h5 class="center">Questions?</h5>
 
-            <p class="light center"> You can contact us via:<br>
-            Email: <a href="mailto:igew@swe-sc.org">igew@swe-sc.org</a> <br>
-              Or<br>
-              <a href="mailto:vstroh77@gmail.com">Vanessa Stroh</a>
+            <p class="light center"> You can contact us via email:<br>
+            <a href="mailto:igew@swe-sc.org">igew@swe-sc.org</a> <br>
           </div>
         </div>
       </div>
