Updated module tracks

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
       </div>
       <br>
-      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 15. 
+      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 15.
 
 
       <br>
@@ -180,24 +180,23 @@
             <tbody>
               <tr>
                 <td>Design a Dessert</td>
-                <td>Find out what a design engineer does as you design and construct a dessert.</td>
+                <td>Find out what a design engineer does as you design and construct a dessert!</td>
               </tr>
               <tr>
                 <td>Duct Tape Creations</td>
-                <td>Use the ultimate engineer's tool: duct tape!  And show off your fashionista skills! You will be able to make wallets, flowers, and other creations so     bring your creativity!</td>
+                <td>Use the ultimate engineer's tool: duct tape!  Show off your fashionista skills! You will be able to make wallets, flowers, and other creations so bring your creativity!</td>
               </tr>
               <tr>
                 <td>Programming Robots</td>
-                <td>Learn about robots and computer programming while you program a LEGO robot and tell it what to do! <br>
-                  (Warning: will not teach you how to tell your sibling what to do)</td>
+                <td>Learn about robots and computer programming while you program a LEGO robot and tell it what to do! <br>(Warning: will not teach you how to tell your sibling what to do)</td>
               </tr>
               <tr>
-                <td>Bridges</td>
-                <td>Engineers and architects designed the famous Brooklyn Bridge, Golden Gate Bridge, London Bridge, and others. Find out about civil engineering as you design and test your own bridge!</td>
+                <td>Bounce Into Polymers</td>
+                <td>Make your own bouncy balls and Goo with everyday materials.</td>
               </tr>
               <tr>
-                <td>Cray-Cray Cranes</td>
-                <td>Lifting heavy items can be difficult but with the help of engineers we show you how to create a easier way to lift and move those heavy items.</td>
+                <td>Gum Drop Domes</td>
+                <td>Geodesic domes are used all over the world to house observatories, as well as some futuristic looking homes. How strong can you make a dome out of gum drops?</td>
               </tr>
             </tbody>
           </table>
@@ -224,20 +223,21 @@
           <td>Learn how scanners and 3D printers can turn you into an avatar and build your dream ideas into reality!</td>
         </tr>
         <tr>
-          <td>Sky-High Sky Scrapers</td>
-          <td>Engineers and architects build some of the tallest and most impressive buildings in the world. Learn about civil engineering as you build your own slender tower.</td>
-        </tr>
-        <tr>
-          <td>Goo Busters</td>
-          <td>Become a chemical engineer while formulating your goo in the mad scientist lab.</td>
-        </tr>
-        <tr>
-          <td>Nanomaterial Magic & Mystery</td>
-          <td>Step right up! Learn about the exciting production and applications of nanomaterials while participating in a one of a kind carnival!</td>
-        </tr>
-        <tr>
           <td>Design a Lunar Lander</td>
           <td>12 men have walked on the Moon, and engineers made it happen. Do you have what it takes to land your astronaut safely on the Moon?</td>
+        </tr>
+        <tr>
+          <td>Tie Dye Forensics</td>
+          <td>Do you have a favorite M&amp;Ms or Skittle candy color? Become a Forensic
+            Scientist to investigate what different dyes are used to color candies.</td>
+        </tr>
+        <tr>
+          <td>Minute to Win it</td>
+          <td>Test your skills with our 60 second challenges to master physics - do you have what it takes?</td>
+        </tr>
+        <tr>
+          <td>Bucket Tower</td>
+          <td>Learn about civil engineering as you build a tower to carry a heavy bucket. How strong can you make it?</td>
         </tr>
         </tbody>
       </table>
@@ -265,8 +265,8 @@
           <td>Learn about road construction and what a civil engineer does while you make chocolate 'asphalt' - a delicious layered dessert!</td>
         </tr>
         <tr>
-          <td>Sticky Situations</td>
-          <td>We use glue for all kinds of applications. Make your own glue and see just how sticky it is!</td>
+          <td>Angry Test Pilots</td>
+          <td>Build a catapult to see who can launch and hit a variety of angry feathered and piggy targets - a real life version of the mobile app!</td>
         </tr>
         <tr>
           <td>Bedroom Alarms</td>
@@ -274,11 +274,11 @@
         </tr>
         <tr>
           <td>Paper Structures</td>
-          <td>Can a paper structure hold up a book? Find out as you use civil engineering to build the strongest structures you can out of paper.</td>
+          <td>How strong is paper? Can you build a structure out of paper strong enough to carry the weight?</td>
         </tr>
         <tr>
-          <td>Marble Run</td>
-          <td>Like roller coasters? This is your chance to be the mechanical engineer that designs and builds one!</td>
+          <td>Safe Landing</td>
+          <td>Help your skydiver touch down safely as you design a parachute.</td>
         </tr>
         </tbody>
       </table>
