Adding links to pages

--- a/volunteer.html
+++ b/volunteer.html
@@ -167,7 +167,7 @@
       <div class="row center">
   
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="#" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
+        <a href="https://www.eventbrite.com/e/igew-volunteer-2018-tickets-41642592114" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
       </div>
       <br>
 
