--- a/index.html
+++ b/index.html
@@ -135,27 +135,27 @@
 
       <div class="row center">
       <p>
-        Due to the location and size of our event, we will have 3 different groupings of 5 modules. <br>
+        Due to the location and size of our event, we will have 3 different tracks of 5 modules. <br>
         Please select the girl's top 2 choices of tracks and we will do our best to accommodate their first choice.  <br>
-        This is a group of 5 workshop modules.  Workshops may be changed or cancelled based on registration or instructor availability.<br>
+        Workshops may be changed or cancelled based on registration or instructor availability.<br>
           * A credit/debit card is needed to be able to register online. *
       </p>
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="#" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register Online</a>
+        <a href="https://www.eventbrite.com/e/intro-girls-to-engineering-2018-tickets-41642360421" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register Online</a>
       </div>
       <div class="row center">
       <p>
-      <i>Registration deadline extended to ????</i><br>
+      <i>Registration deadline is Feb 9th</i><br>
      <h5> <b>Register by mail instructions: </b> <br> </h5>
-      Download and print this <a href="http://swe-sc.org/WOW/WOWRegForm.pdf" target="_blank">registration form</a>. <br>
+      Download and print this <a href="http://www.swe-sc.org/IGEW/RegistrationForm.pdf" target="_blank">registration form</a>. <br>
       A parent sign the form and mail it in, post marked no later than Sept 28th with a check<br><br>
       <i>Can't afford the $30 fee?</i><br> 
       Request a need-based <a href="https://form.jotform.com/73476813306964" target="_blank">fee waiver here</a>. <br>
-      Waiver due date:  ???. You must also register by the due date.</p>
+        Pre-Registration is required no later than Feb 9, 2018.</p>
 
       </div>
       <br>
-      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 15.
+      <b>Cancellation & Refunds:</b>  We can only refund money for cancellations made prior to Feb 9.  After that, you may send a substitute provided she has a signed consent form and we are notified by Feb 9th.
 
 
       <br>
