--- a/index.html
+++ b/index.html
@@ -148,10 +148,11 @@
       <i>Registration deadline is Feb 9th</i><br>
      <h5> <b>Register by mail instructions: </b> <br> </h5>
       Download and print this <a href="http://www.swe-sc.org/IGEW/RegistrationForm.pdf" target="_blank">registration form</a>. <br>
-      A parent sign the form and mail it in, post marked no later than Sept 28th with a check<br><br>
+      A parent sign the form and mail it in, post marked no later than Feb 9th with a check. <br>
+        Pre-Registration is required no later than Feb 9, 2018.<br><br>
       <i>Can't afford the $30 fee?</i><br> 
       Request a need-based <a href="https://form.jotform.com/73476813306964" target="_blank">fee waiver here</a>. <br>
-        Pre-Registration is required no later than Feb 9, 2018.</p>
+        </p>
 
       </div>
       <br>
