Changed IGEW18 links in volunteer

--- a/volunteer.html
+++ b/volunteer.html
@@ -32,8 +32,8 @@
       <!--Mobile nav-->
 
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="http://www.swe-sc.org/IGEW/">IGEW Participant</a></li>
-        <li><a href="http://www.swe-sc.org/IGEW/VolunteerReg">IGEW Volunteer</a></li>
+        <li><a href="http://www.swe-sc.org/IGEW18/">IGEW Participant</a></li>
+        <li><a href="http://www.swe-sc.org/IGEW18/VolunteerReg">IGEW Volunteer</a></li>
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
