Changed links to IGEW

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <body>
   <nav class="#5e35b1 deep-purple darken-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/IGEW18/" class="brand-logo">Introducing Girls to Engineering Workshop</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="http://www.swe-sc.org/IGEW/" class="brand-logo">Introducing Girls to Engineering Workshop</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
       </ul>
@@ -32,8 +32,8 @@
       <!--Mobile nav-->
 
         <ul id="nav-mobile" class="side-nav">
-            <li><a href="http://www.swe-sc.org/IGEW18/">IGEW Participant</a></li>
-            <li><a href="http://www.swe-sc.org/IGEW18/volunteer">IGEW Volunteer</a></li>
+            <li><a href="http://www.swe-sc.org/IGEW/">IGEW Participant</a></li>
+            <li><a href="http://www.swe-sc.org/IGEW/volunteer">IGEW Volunteer</a></li>
             <li><a href="http://swe-sc.org/">SWE Space Coast</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
