Added note about reg closing

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
       <div class="row center">
       <p>
       <i>Registration deadline is Feb 9th</i><br>
+          <i>Registration for girls is anticipated close by Saturday 13th Jan when all the slots fill.
+              After that, openings may occur if we have cancellations.  We do not maintain a Wait List.<br>
+              If openings come up it will be posted on the  <a href="https://www.facebook.com/SWESCOutreach/" target="_blank">Education Outreach Facebook page.</a></i>
      <h5> <b>Register by mail instructions: </b> <br> </h5>
       Download and print this <a href="http://www.swe-sc.org/IGEW/RegistrationForm.pdf" target="_blank">registration form</a>. <br>
       A parent sign the form and mail it in, post marked no later than Feb 9th with a check. <br>
