--- a/volunteer.html
+++ b/volunteer.html
@@ -66,7 +66,7 @@
           <div class="card-stacked">
             <div class="card-content #00acc1 cyan darken-2 white-text center">
             <h5>
-                Date: Saturday, February 24, 2018 <br>
+                Date: Saturday, February 16, 2019 <br>
 
               <br>
 
@@ -127,8 +127,7 @@
 
               <li class="collection-item">
               
-                <p><i class="material-icons">chevron_right</i> There will be a volunteer training meeting <b>required for workshop leaders</b> and encouraged for first time volunteers. <br>
-                  Details will be announced.
+                <p><i class="material-icons">chevron_right</i> There will be a volunteer training meeting <b>required for workshop leaders</b> and encouraged for first time volunteers on Sunday Feb 3 in Cocoa Beach. More details will be announced.
                 </p>
               </li>
 
@@ -166,8 +165,11 @@
       <div class="row center">
   
         <!-- INSERT Eventbrite REGISTRATION LINK HERE -->
-        <a href="https://www.eventbrite.com/e/igew-volunteer-2018-tickets-41642592114" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
+        <a href="https://www.eventbrite.com/e/igew-volunteer-2019-tickets-54267913791" target="_blank" id="download-button" class="btn-large waves-effect waves-light #00bfa5 teal accent-4"><i class="material-icons right">edit</i>Register to Volunteer</a>
       </div>
+          <div class="row center">
+            Volunteer registration closes on February 6th 
+          </div>
       <br>
 
 
@@ -285,6 +287,46 @@
         <tr>
           <td>Safe Landing</td>
           <td>Help your skydiver touch down safely as you design a parachute.</td>
+        </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+
+  <!--   Track 4  -->
+
+  <div class="container">
+    <div class="section #ffcc80 orange lighten-4">
+      <h5>Track 4</h5>
+      <table class="striped">
+        <thead>
+        <tr>
+          <th>Project Title</th>
+          <th>Description</th>
+        </tr>
+        </thead>
+
+        <tbody>
+        <tr>
+          <td>Egg Bungee Jump</td>
+          <td>Can you design and build an egg bungee jump that will keep the egg from breaking?</td>
+        </tr>
+        <tr>
+          <td>Bridges</td>
+          <td>Engineers and architects designed the famous Brooklyn Bridge, Golden Gate Bridge, London Bridge, and others. Find out about civil engineering as you design and test your own bridge!</td>
+        </tr>
+        <tr>
+          <td>Zip Lines</td>
+          <td>Imagine zipping through the trees to get to school! This is your chance to design your own zip line!</td>
+        </tr>
+        <tr>
+          <td>Marble Run</td>
+          <td>Like roller coasters? This is your chance to be the mechanical engineer that designs and builds one!</td>
+        </tr>
+        <tr>
+          <td>Gears and Spinners</td>
+          <td>Learn about how gears work in a spinner while you make a spinner of your own.</td>
         </tr>
         </tbody>
       </table>
