Added line for online reg and updated description

--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 
       <div class="row center">
       <p>
-        Due to the location and size of our event, we will have 3 different tracks of 5 modules. <br>
-        Please select the girl's top 2 choices of tracks and we will do our best to accommodate their first choice.  <br>
+        Due to the location and size of our event, we will have 4 different tracks of 5 modules. <br>
+        Please select the girl's top 2 choices of tracks and we will do our best to accommodate their first choice.  Online registrations only need to select one track. <br>
         Workshops may be changed or cancelled based on registration or instructor availability.<br>
           * A credit/debit card is needed to be able to register online. *
       </p>
