Changed reg line

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="row center">
       <p>
       <i>Registration deadline is February 1st, 2019</i><br>
-          <i>Registration for girls is anticipated close by 13th Jan when all the slots fill.
+          <i>Registration will close early when all the slots fill.
               After that, openings may occur if we have cancellations.  <br> We do not maintain a Wait List.<br>
               If openings come up it will be posted on the  <a href="https://www.facebook.com/SWESCOutreach/" target="_blank">Education Outreach Facebook page.</a></i>
      <h5> <b>Register by mail instructions: </b> <br> </h5>
